# github-app-golang

./: BUILD.bazel  README.md  go.mod  go.sum  secrets.example.yaml
bazel/go/: deps.bzl
cli/: BUILD.bazel  main.go
cli/cmd/: .gitignore  BUILD.bazel  root.go  start.go
lib/cobrago/: BUILD.bazel  storage.go
pkg/aws/: BUILD.bazel  s3.go
pkg/console/: BUILD.bazel  print.go
pkg/github/: BUILD.bazel  config.go  events.go  middleware.go  util.go
tools/: smee.bash  smee.install.bash
