load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cobrago_commands",
    srcs = ["main.go"],
    importpath = "github.com/jrbeverly/github-app-golang/cli",
    visibility = ["//visibility:private"],
    deps = ["//cli/cmd"],
)

go_binary(
    name = "cobrago",
    embed = [":cobrago_commands"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "cobrago_docker",
    out = "cobrago",
    embed = [":cobrago_commands"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/jrbeverly/github-app-golang/cli",
    visibility = ["//visibility:private"],
    deps = ["//cli/cmd"],
)
