load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "start.go",
        "version.go",
    ],
    importpath = "github.com/jrbeverly/github-app-golang/cli/cmd",
    visibility = ["//visibility:public"],
    x_defs = {
        "tool": "github-app-golang",
        "version": "{TOOL_VERSION}",
        "commit": "{STABLE_GIT_COMMIT}",
    },
    deps = [
        "//lib/cobrago",
        "//pkg/aws",
        "//pkg/console",
        "//pkg/github",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)
