load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "github",
    srcs = [
        "events.go",
        "config.go",
        "middleware.go",
        "util.go",
    ],
    importpath = "github.com/jrbeverly/github-app-golang/pkg/github",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/cobrago",
        "@com_github_bradleyfalzon_ghinstallation//:ghinstallation",
        "@com_github_google_go_github//github",
        "@com_github_justinas_alice//:alice",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
